welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {
    
    while(!estSurBiscuit){
    	if(isFacinTrail()==true){
    		avance()
    	}else{droite()}
    		
    	}
    
}

def isFacingTrail():Boolean = {
    var couleur:Color = Color.gray
	if(!estFaceMur()){
		avance()
		couleur = getCouleurSol()
		recule()
	}
		if(couleur == Color.green)
		return true
		else {
			return false
		}
	}




